# hls-vi

./: .dockerignore  .gitignore  .sourcery.yaml  Dockerfile  MANIFEST.in  Makefile  README.md  compose.yaml  mypy.ini  pyproject.toml  setup.py  tox.ini
.devcontainer/: devcontainer.json  docker-compose.yaml
.github/workflows/: test.yml
code/: .gitignore  G2963019115-LPCLOUD.xml  hls-vi2.py  hls_vi_test2.ipynb  vi_samples.py
hls-vi/: hls-vi.py  hls_stac_item.py  hls_vi.ipynb  hls_vi.py  hls_vi_OLD.py  hls_vi_samples.py  hls_vi_test2.ipynb  vi_samples.py
hls-vi/.ipynb_checkpoints/: hls_vi_test2-checkpoint.ipynb
hls_vi/: generate_indexes.py  generate_indices.py  generate_metadata.py  generate_stac_items.py  hls_vi.ipynb  hls_vi_metadata_creator.py
hls_vi/schema/: Granule.xsd  MetadataCommon.xsd
scripts/: format  lint  test  typecheck
tests/: HLS-VI-verification.ipynb  test_vi.py
tests/fixtures/: HLS-VI.L30.T06WVS.2024120T211159.v2.0.cmr.xml  HLS-VI.S30.T13RCN.2024128T173909.v2.0.cmr.xml  HLS-VI_stac_item.json  HLS.S30.T13RCN.2024128T173909.v2.0.cmr.xml  test_output.json  unit_test_output.json
tests/fixtures/HLS-VI.S30.T13RCN.2024128T173909.v2.0/: HLS-VI.S30.T13RCN.2024128T173909.v2.0.TVI.tif
tests/fixtures/HLS.L30.T06WVS.2024120T211159.v2.0/: HLS.L30.T06WVS.2024120T211159.v2.0.Fmask.tif  HLS.L30.T06WVS.2024120T211159.v2.0.cmr.xml
tests/fixtures/HLS.S30.T13RCN.2024128T173909.v2.0/: HLS.S30.T13RCN.2024128T173909.v2.0.Fmask.tif  HLS.S30.T13RCN.2024128T173909.v2.0.cmr.xml
